feat(notes): add search & pagination
